app/styles/text.scss
h1 {

	line-height:1;
	font-size:60px;
	font-weight:600;
	letter-spacing:-1px;
	font-family:"Poppins";
	transition:color 0.3s;
	color:var(--text-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	img[inline] { height:45px; }

	i { vertical-align:middle; }

	@include media(max-width-1449) {
		font-size:46px;
		img { height:34px; }
	}

	@include media(max-width-600) {
		width:100%;
		font-size:38px;
		margin-bottom:0px;
		img { height:28px; }
	}

}

h2 {

	font-size:38px;
	font-weight:600;
	line-height:1.5;
	letter-spacing:-1px;
	font-family:"Poppins";
	transition:color 0.3s;
	color:var(--text-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	img[inline] { height:29px; }

	i { vertical-align:middle; }

	@include media(max-width-550) {
		font-size:30px;
		line-height:1.3;
		img { height:22px; }
	}

}

h3 {

	font-size:30px;
	font-weight:500;
	line-height:1.2;
	letter-spacing:-1px;
	font-family:"Poppins";
	transition:color 0.3s;
	color:var(--text-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	img[inline] { height:23px; }

	i { vertical-align:middle; }

}

h4 {

	font-size:22px;
	font-weight:600;
	line-height:1.2;
	letter-spacing:-1px;
	font-family:"Poppins";
	transition:color 0.3s;
	color:var(--text-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	img[inline] { height:18px; }

	i { vertical-align:middle; }

}

h5 {

	font-size:18px;
	font-weight:600;
	line-height:1.2;
	letter-spacing:-1px;
	font-family:"Poppins";
	transition:color 0.3s;
	color:var(--text-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	i { vertical-align:middle; }

}

li {
	font-size:18px;
	font-weight:400;
	line-height:1.7;
	color:var(--faint-color);
	font-family:var(--system-font-app);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
}

p {

	font-size:18px;
	font-weight:400;
	line-height:1.7;
	color:var(--faint-color);
	font-family:var(--system-font-app);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	img[inline] { height:14px; }

}

blockquote {

	padding:20px;
	color:var(--faint-color);
	border-radius:0 12px 12px 0;
	background-color:var(--boxes-color);
	border-left:3px solid var(--hover-color);

	&[text] {
		&:before {
			content:attr(text) ": ";
			text-transform:uppercase;
		}
	}

	&[pink] {
		border-left-color:#ff009e;
		&:before { color:#ff009e; }
	}

	&[green] {
		border-left-color:#00ff6e;
		&:before { color:#00ff6e; }
	}

	&[orange] {
		border-left-color:#ff9b67;
		&:before { color:#ff9b67; }
	}

	&[purple] {
		border-left-color:#9d2fff;
		&:before { color:#9d2fff; }
	}

	&[yellow] {
		border-left-color:#ffde00;
		&:before { color:#ffde00; }
	}

	codes, code {
		box-shadow:none;
		background-color:var(--darker-color);
	}

}

n {

	font-size:13px;
	font-weight:400;
	line-height:1.5;
	margin-top:10px;
	display:inline-block;
	color:var(--faint-color);
	font-family:var(--system-font-app);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;

	a {
		color:var(--faint-color);
	}

}

l {

	cursor:default;
	padding:3px 8px;
	font-size:0.6em;
	border-radius:4px;
	white-space:nowrap;
	display:inline-block;
	vertical-align:middle;
	text-transform:uppercase;
	color:var(--faint-color);
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing:antialiased;
	font-family:var(--system-font-mono);
	border:1px solid var(--faint-color);

	[flex] & {
		margin:0 10px;
	}

	&[faint] {
		opacity:0.6;
	}

	&[blue] {
		color:#0084ff;
		border:1px solid #0084ff;
	}

	&[pink] {
		color:#ff009e;
		border:1px solid #ff009e;
	}

	&[green] {
		color:#00ff6e;
		border:1px solid #00ff6e;
	}

	&[orange] {
		color:#ff9b67;
		border:1px solid #ff9b67;
	}

	&[purple] {
		color:#9d2fff;
		border:1px solid #9d2fff;
	}

	&[yellow] {
		color:#ffde00;
		border:1px solid #ffde00;
	}

}

h1, h2, h3, h4, h5 {
	&:not(:last-child) {
		margin-bottom:20px;
	}
}

blockquote, ul, ol {
	&:not(:last-child) {
		margin-bottom:30px;
	}
}

table, pre, p {
	&:not(:last-child) {
		margin-bottom:30px;
	}
}

ul, ol {
	li {
		margin-left:30px;
	}
}

